  * Add fix for missing installation of Danish templates (by GCS)
  * config: don't try to list_lists when upgrading from pre 2.1
    (bsb, closes: #242945).
  * Fix Woody FTBFS, reported and solution provided by Andreas Barth
    <aba@not.so.argh.org>, (by GCS, closes: #243209).
  * Ask for the language used by Mailman from the enabled languages
    (by GCS, closes: #224319).

 -- Siggy Brentrup <bsb@debian.org>  Sat, 10 Apr 2004 12:46:59 +0200

mailman (2.1.4-3) unstable; urgency=medium

  * Fix bogus test for empty qfiles/ in preinst (bsb, closes: #240033).
  * Create group list as a system group if it doesn't exist
    (bsb, closes: #240672).
  * Use true/false for mailman/gate_news to make it work (bsb).
  * Purge all mailman files _in_ucf_database_ on package purge (bsb).
  * Make 'leftover' notice stand out (bsb).
  * Added helper debconf template mailman/used_languages to avoid
    duplicate scanning on preconfigure/setup, while at it make config more
    robust (bsb, closes: #241021).
  * Remove bashism from debian/config (by GCS, closes: #240643).
  * Mention mm_cfg.MTA=None in README.EXIM (closes: #240295), also fix
    pathes to reflect Debian choices (bsb).
  * Include add_virtualdomain call in mm_cfg.py (closes: #238509), while
    at it regroup options and add comments (bsb).
  * Incorporate enhancements to postfix-to-mailman.py (bsb).
  * 50_README.POSTFIX.dpatch to reflect our choices (bsb).

 -- Siggy Brentrup <bsb@debian.org>  Tue, 30 Mar 2004 18:51:57 +0200

mailman (2.1.4-2) unstable; urgency=low

  * Brown bag release.
  * Move that pid file.  Now.  (closes: #226152)
  * Switch to dpatch
  * Don't traceback when using admin password (closes: #233161)
  * Fix up MAILMAN_OWNER. (closes: #232452, #232273)
  * Make the postinst a lot less chatty (closes: #232546)
  * Update Spanish debconf translation (closes: #233693)
  * Update pt_BR debconf translation (closes: #228123)
  * Add Hungarian debconf translation (by GCS)